--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.2"
 scikit-learn = "^1.5.1"
 seaborn = "^0.13.2"
 statsmodels = "^0.14.2"
+category-encoders = "^2.6.3"
 
 
 [build-system]
